# 2023-2024-Firmware

./: .gitignore  README.md  ROTDATA.TXT  ex
Go_Pro_Self_Cleaner.ino/: Go_Pro_Self_Cleaner.ino.ino
doc/: VSCasArduinoIDE.md  communications_thoughts.xlsx  installs.md  readme.md  setup.md  useful platform cli commands.txt
examples/CVT_Cooling/: CVT_Cooling.ino
examples/LoRa/: ComtoPython.py  Wreceiver.ino
examples/PyQt6/: mainwindow.ui  mainwindow_ui.py  myapp.py
examples/Regressions/: GaussianElimination.py  ParametricPlot.py  PiecewiseRegression.py  data.txt  datashort.txt  main.py
examples/data/: sorryforthisformat.txt
examples/fake_a_lora/: commonEnums.py  platformio.ini
examples/inclinometer/: read_all_data.ino
examples/json_data/: JSONtoPython.py  data-packet-one.json  data-packet-three.json  data-packet-two.json
examples/shitty board/: platformio.ini
examples/validation/: messagedeviceparsing.cpp  sketchpad.py
lib/application/: ConfigParser.py  SerialDevices.py
lib/esp32-bajablast/: library.json
lib/util/: config.json
src/: config.json
src/CactusControl/: form.ui  ui_form.py
src/CactusControl - Computer/: CactusControlApp.py  CactusControlApp11.py  CactusControlCLI.py  SerialHandling.py  utilsImporter.py
src/Car - Lora/: platformio.ini
src/CarWifiServer - Esp32/: platformio.ini
src/Controller - Pi/: CommBridge.py  (+7 more)
src/util/application/: README.md  pyproject.toml
src/util/application/src/UofA_BAJA_2023_2024_common/: Messages.py  SerialDevices.py  enums.py
src/util/application/src/common/: Messages.py  SerialDevices.py
(+114 files in other folders)
