[project]
name = "UofA_BAJA_Palatable9622"
version = "0.0.2"
authors = [
  { name="Alex Romero", email="bix.romero@gmail.com" },
]
description = "packages for the UofA Baja team"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/UofA-BAJA/2023-2024-Firmware"