[project]
name = "UofA_BAJA_2023-2024"
version = "0.1.6"
authors = [
  { name="Alex Romero", email="bix.romero@gmail.com" },
]
description = "packages for the UofA Baja team"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/UofA-BAJA/2023-2024-Firmware"